# DoloresPublic

./: .gitignore  README.md  go.mod  go.sum  main.go  scrapcode.txt  serena.service  serina.service  todo
.devcontainer/: Dockerfile  devcontainer.json
Dolores/: Cargo.toml
Dolores/src/: main.rs
IAC/: Dockerfile  docker-compose.yml  dolores.service
Serina/: Cargo.toml  Makefile.toml  build.rs
Serina/.cargo/: config.toml
Serina/src/: badbuild.rs  constants.rs  main.rs
Serina/template/: example.env  phrases_example.txt
internal/messages/: messages.go
internal/notion/: notion.go
internal/pluralkit/: pluralkit.go
prod/: Gemfile  dolores.rb  doloresmessages.rb  doloresnotion.rb  dolorespluralkit.rb
spec/: dolores_spec.rb  doloresnotion_spec.rb
