[package]
name = "dolores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
libhoney-rust = "0.1.6"