[package]
name = "dolores"
version = "0.1.0"
edition = "2021"
# rustc-link-search = ["/usr/bin"]
# rustc-link-lib = ["openssl"]
# root = "/usr/bin"
# key = "value"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", features = ["utils"] }
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-stream = "0.3.3"
futures-core = "0.3"
futures-util = "0.3"
anyhow = "1.0.68"
notion = "0.5.1"

[features]
default = []

dev = []