[package]
name = "dolores"
version = "0.1.0"
edition = "2021"
# rustc-link-search = ["/usr/bin"]
# rustc-link-lib = ["openssl"]
# root = "/usr/bin"
# key = "value"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.7", features = ["utils"] }
tokio = { version = "1.20.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "full",
] }
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-stream = "0.3.3"
futures-core = "0.3"
futures-util = "0.3"
anyhow = "1.0.68"
notion = "0.5.1"
chrono = "0.4.24"
once_cell = "1.18.0"
opentelemetry = { version = "0.21.0", features = ["logs"] }
opentelemetry-otlp = { version = "*", features = [
    "logs",
    "http-proto",
    "reqwest-client",
] }
opentelemetry_sdk = { version = "*", features = ["logs", "rt-tokio"] }
opentelemetry-semantic-conventions = { version = "*" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "registry",
    "std",
    "env-filter",
    "fmt",
] }
opentelemetry-appender-tracing = { version = "*" }
[features]
default = []
dev = []
