[package]
name = "Serina"
version = "0.1.0"
edition = "2021"
# toggle this on if you need autocomplete support for build.rs, just make sure to target it off before you build!
build = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "0.11.5", features = ["utils"] }
tokio = { version = "1.20.1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "full",
] }
dotenv = "0.15.0"
serde_json = "1.0"
reqwest = { version = "0.12.2", features = ["json"] }
async-stream = "0.3.3"
futures-core = "0.3"
futures-util = "0.3"
anyhow = "1.0.68"
notion = "0.5.1"
chrono = "0.4.24"
once_cell = "1.18.0"
opentelemetry = { version = "0.23.0", features = ["logs"] }
opentelemetry-otlp = { version = "0.16.0", features = [
    "logs",
    "http-proto",
    "reqwest-client",
] }
opentelemetry_sdk = { version = "0.23.0", features = ["logs", "rt-tokio"] }
opentelemetry-semantic-conventions = { version = "*" }
tracing = { version = "0.1", features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "registry",
    "std",
    "env-filter",
    "fmt",
] }
opentelemetry-appender-tracing = { version = "0.4.0", default-features = false }
serde = "1.0.193"
uncased = "0.9.10"
rand = "0.8.5"
clap = { version = "4.5.10", features = ["derive", "cargo"] }
indoc = "2.0.5"
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }

[build-dependencies]
fs_extra = "1.3.0"
sudo2 = "0.2.1"

[features]
default = []
dev = []
